<resources>
    <string name="app_name">Expense categories</string>
    <string name="app_version_name_title">Version :</string>
    <string name="app_version_name_default_when_no_access">-</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="desenvolvido_por">Developed by: Ricardo Cassettari Junior</string>
    <string name="about_activity_button_close">Ok</string>

    <string name="ERR_DATABASE_INSERT_ERROR">ERR_DATABASE_INSERT_ERROR</string>
    <string name="DATABASE_INSERT_SUCCESS">DATABASE_INSERT_SUCCESS</string>

    <string name="login_activity_invalid_user_or_password">Invalid user or password</string>
    <string name="cancelled">Cancelled</string>
    <string name="loading_data">Loading data...</string>
    <string name="err_loading_data">"Error loading data: "</string>
    <string name="err_delete_expense_category">Error while trying to exclude expense category:</string>
    <string name="delete_expense_category_completed">Expense category deleted:</string>

    <string name="button_expense_category_update">Update</string>
    <string name="expense_category_created">Expense category created</string>
    <string name="expense_category_updated">Expense category updated</string>
    <string name="err_keeping_expense_category">Error while trying to keep expense category:</string>

    <string name="url_to_get_user">http://www.mocky.io/v2/58b9b1740f0000b614f09d2f</string>
    <string name="err_sincronize_user_data">Fail to sinchronize user data ! Please close application and try again...</string>

    <string name="activity_login_login_hint">Login</string>
    <string name="activity_login_password_hint">Password</string>
    <string name="activity_login_keep_conected_text">Keep Connected</string>
    <string name="activity_login_button_connect_text">Connect</string>

    <string name="activity_nova_categoria_despesa_botao_cadastrar">Save</string>

    <string name="itemcategoriadespesa_botao_excluir">Delete</string>
    <string name="itemcategoriadespesa_botao_editar">Edit</string>

    <string name="menu_item_sair">Exit</string>
    <string name="menu_item_sobre">About...</string>
    <string name="found_executing_script">Found, executing script...</string>
    <string name="script_not_found">Script not found</string>
    <string name="executing_script">Executing script</string>
    <string name="cannot_read_sqllite_file">Cannot read SQL Lite File !</string>

</resources>
