<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.tsi.controlegastos.LoginActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_login_login_hint"
        android:id = "@+id/etLogin"
        />

    <EditText
        android:layout_below="@id/etLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_login_password_hint"
        android:id = "@+id/etSenha"
        android:inputType="textPassword"
        />

    <CheckBox
        android:layout_below="@id/etSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cbManterConectado"
        android:text = "@string/activity_login_keep_conected_text"
        />

    <Button
        android:layout_below="@id/cbManterConectado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_login_button_connect_text"
        android:id="@+id/btConnectar"
        android:onClick="logar"
        />

</RelativeLayout>