<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.tsi.controlegastos.AboutActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background_splash">

    <ImageView
        android:layout_width="@dimen/largura_logo_splash"
        android:layout_height="@dimen/altura_logo_splash"
        android:id="@+id/splash_image_about"
        android:background="@drawable/controle_gastos_logo" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_below="@+id/splash_image_about"
        android:layout_width="@dimen/largura_logo_splash"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/text_splash"
        android:textAlignment="center"
        android:textSize="@dimen/textsize_below_logo_splash"
        />

    <TextView
        android:layout_below="@+id/tvAppName"
        android:id="@+id/tvAppVersionName"
        android:layout_width="@dimen/largura_logo_splash"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/text_splash"
        android:textAlignment="center"
        android:textSize="@dimen/textsize_below_logo_splash" />

    <TextView
        android:layout_below="@+id/tvAppName"
        android:id="@+id/tvAppDeveloperName"
        android:layout_width="@dimen/largura_logo_splash"
        android:layout_height="wrap_content"
        android:text="@string/desenvolvido_por"
        android:textColor="@color/text_splash"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_developer_name" />

    <Button
        android:id="@+id/btFecharVersao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAppVersionName"
        android:onClick="fecharVersao"
        android:text="@string/about_activity_button_close" />

</LinearLayout>
